--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,43 @@
-/*  your css code here. If applicable */
+
+table.middle {
+    width: 80%;
+    margin: 20px auto;
+    border-collapse: collapse;
+    border: 1px solid black;
+    spacing: 1px;
+}
+
+
+td {
+    padding: 1px;
+    border: 1px solid black;
+}
+
+
+.center {
+    text-align: center;
+}
+
+.right {
+    text-align: right;
+}
+
+
+.green {
+    background-color: green;
+    color: white;
+}
+
+.blue {
+    background-color: blue;
+    color: white;
+}
+
+
+#t-image img {
+    width: 100%;
+    max-width: 300px;
+    display: block;
+    margin: 0 auto;
+}
+
