--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,27 @@
 
-table.middle {
-    width: 80%;
-    margin: 20px auto;
+/* General Styling */
+body {
+    font-family: Arial, sans-serif;
+}
+
+h1 {
+    text-align: center;
+}
+
+table {
+    width: 100%;
     border-collapse: collapse;
-    border: 1px solid black;
-    spacing: 1px;
+    margin-bottom: 20px;
 }
 
-
-td {
+table, th, td {
+    border: 1px solid black;
     padding: 1px;
-    border: 1px solid black;
 }
 
+.middle {
+    margin: 0 auto;
+}
 
 .center {
     text-align: center;
@@ -22,22 +31,10 @@ td {
     text-align: right;
 }
 
-
 .green {
     background-color: green;
-    color: white;
 }
 
 .blue {
     background-color: blue;
-    color: white;
 }
-
-
-#t-image img {
-    width: 100%;
-    max-width: 300px;
-    display: block;
-    margin: 0 auto;
-}
-
